--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.2",
-    "mongoose": "^6.1.7"
+    "mongoose": "^6.1.7",
+    "socket.io": "^4.4.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
