--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,24 +4,23 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/icons": "^1.1.1",
-    "@chakra-ui/react": "^1.7.4",
-    "@emotion/react": "11",
-    "@emotion/styled": "11",
-    "@types/node": "^16.7.13",
-    "@types/react": "^17.0.20",
-    "@types/react-dom": "^17.0.9",
+    "@chakra-ui/react": "^1.8.1",
+    "@emotion/react": "11.7.1",
+    "@emotion/styled": "11.6.0",
     "axios": "^0.25.0",
-    "framer-motion": "5",
+    "framer-motion": "6.2.3",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-select": "^5.2.2",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "socket.io-client": "^4.4.1",
-    "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,5 +45,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.14",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0",
+    "redux-devtools-extension": "^2.13.9",
+    "typescript": "^4.5.5"
   }
 }
